2000-07-14  Grace He <ghe@scs.Ryerson.CA>

	* router/dateparse.c:
	    Fix for "Date: 00-06-29 03:50:11" induced crashes

2000-07-14  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* lib/selfaddrs.c:
	    Rearrange SIOCGLIFCONF / SIOCGIFCONF code a bit, will
	    prefer SIOCGLIFCONF over SIOCGIFCONF if both are available.

	* lib/selfaddrs.c, lib/zgetifaddress.c, include/libz.h,
	  configure.in, utils/makedb/Makefile.in:
	    Solaris 8 test derived fixes.

2000-07-12  John D Groenveld <jdg117@elvis.arl.psu.edu>

	* man/Makefile.in:
	    If "${MANDIR}/man3 directory does not exist, create it.

2000-07-11  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Sometimes printing to logfp was done unconditionally -- when
	    the logfp variable carries NULL :-/

2000-06-22  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c, smtpserver/mxverify.c:
	    Further commentary from  bind-workers  told me that unless
	    the AA-bit (authoritative answer) is set, the received ADDATA
	    isn't possibly good enough to trust - some of A/AAAAs may have
	    expired.  Thus we shall use that reply section for A/AAAA only
	    if AA-bit is set.

2000-06-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/mxverify.c, transports/smtp/smtp.c:
	    Made smtpserver MXVERIFY to use DNS ADDITIONAL DATA,
	    and reorganized A record collection so that if some
	    MX server does not have A, that is asked for it
	    explicitely, and if ipv6 is in use, if AAAA data
	    does not exist for a server, it is asked for.
	    In case ipv6 is not in use, this collapses into plain
	    A type data retrieval.

	* lib/selfaddrs.c:
	    Removed a test which is never true.

	* transports/smtp/smtp.c:
	    Some more tuning of  getmxrr()  pathology processing.

2000-06-20  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Use  zgetifaddress() for '-L iface:eth0' binding.
